# RaphaelV3

./: .env.example  .gitignore  Dockerfile.sandbox  README.md  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml  raphael-rebirth.md  raphael-v2.1.md  requirements.txt  run_help.sh  test_command.sh  test_imports.py
agent/: Dockerfile  __init__.py  agent.py  audit.py  crypto.py  dependency_check.py
benchmarks/: __init__.py  full_lifecycle_benchmark.py
bridge/: raphael_bridge.py
c2-server/: Dockerfile  main.py  requirements.txt
cai-service/: Dockerfile  main.py  requirements.txt
ci-templates/: .gitlab-ci.yml  Jenkinsfile
cli/: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  README.md  knip.json  package.json
cloak-service/: Dockerfile  main.py  requirements.txt
config/: hrm_service.conf  paths.py  target.py
docker/: api.Dockerfile
exploits/: autonomous_result.json  exploit_all.py  exploit_ghostcat.py  exploit_idor.py  exploit_jsp_sqli.py  exploit_lfi.py  exploit_mass_assignment.py  exploit_sqli_login.py  exploit_sqli_search.py  exploit_upload_webshell.py  target_details.json  vulnu_harness.py  vulnu_results.json
kali-tools/: Dockerfile  server.py
mcp-hub/: Dockerfile  auth.py  config.yaml  docker-compose.yml  main.py  requirements.txt
mhddos-service/: Dockerfile  main.py
orchestrator/: audit_trail.py  auth.py  brain.py  checkpoint.py  conductor.py  engagement_queue.py  events.py  growth_db.py  kali_tools_client.py  karma_wrapper.py  providers.py  proxy_guard.py  sandbox.py  scope.py  spiderfoot_wrapper.py  webhook.py
phishing/: Dockerfile  main.py  (+1 more)
(+476 files in other folders)
