[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raphael-2.0"
version = "2.0.0"
description = "Autonomous AI Security Platform - Interactive CLI"
readme = "QUICKSTART.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Raphael Security Team"}
]
keywords = ["security", "pentesting", "ai", "cybersecurity", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.0",
    "pyyaml>=6.0",
    "dnspython>=2.6.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "numpy>=1.24.0",
    "duckduckgo-search>=6.0.0",
    "cryptography>=41.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.9",
    "mcp>=1.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
raphael = "raphael_cli:main"

[tool.setuptools]
py-modules = ["raphael_cli"]
zip-safe = false